// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component Should be large, red, disabled and multioption 1`] = `
<div
  className="select is-large is-danger is-multiple"
  style={Object {}}
>
  <select
    disabled={true}
    multiple={true}
    name={null}
    readOnly={false}
    value=""
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should concat classname in props with Bulma classname 1`] = `
<div
  className="select other-class this-is-a-test"
  style={Object {}}
>
  <select
    disabled={false}
    multiple={false}
    name={null}
    readOnly={false}
    value=""
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": undefined,
    "children": null,
    "className": "",
    "clearfix": undefined,
    "clipped": undefined,
    "color": null,
    "disabled": false,
    "hidden": undefined,
    "invisible": undefined,
    "italic": undefined,
    "loading": false,
    "marginless": undefined,
    "multiple": false,
    "name": null,
    "overlay": undefined,
    "paddingless": undefined,
    "pull": undefined,
    "radiusless": undefined,
    "readOnly": false,
    "responsive": undefined,
    "shadowless": undefined,
    "size": null,
    "style": Object {},
    "textAlignment": undefined,
    "textColor": undefined,
    "textSize": undefined,
    "textTransform": undefined,
    "textWeight": undefined,
    "unselectable": undefined,
    "value": "",
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "color": [Function],
    "disabled": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "loading": [Function],
    "marginless": [Function],
    "multiple": [Function],
    "name": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "readOnly": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "size": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
    "value": [Function],
  },
  "render": [Function],
}
`;

exports[`Select component Should have select classname 1`] = `
<div
  className="select"
  style={Object {}}
>
  <select
    disabled={false}
    multiple={false}
    name={null}
    readOnly={false}
    value=""
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should use inline styles 1`] = `
<div
  className="select"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <select
    disabled={false}
    multiple={false}
    name={null}
    readOnly={false}
    value=""
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;
